# simtest

./: .gitignore  README.md
firmware/: CMakeLists.txt  Makefile
firmware/.dep/: main.o.d
firmware/src/: main.c
test/: .cproject  .valgrind.supp  1  CMakeLists.txt  Makefile  README.md  compile_commands.json  cscope.files  gccdump.s  main.elf  valgrind.supp
test/.dep/: main.o.d
test/client/: package-lock.json  package.json
test/client/src/: index.js
test/cmake/Modules/: FindLibElf.cmake  FindLibUV.cmake  FindLibWebSockets.cmake  Findsimavr.cmake  RCC.cmake
test/resources/: app.js  index.html  style.css
test/src/: avr_usi.c  avr_usi.h  button.c  button.h  component.c  component.h  event.c  event.h  http.c  http.h  led.c  led.h  main.c  simulator.c  simulator.h  websocket.c  websocket.h
